WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
283089
AX: VoiceOver typing echo doesn't work in PDF form fields
https://bugs.webkit.org/show_bug.cgi?id=283089
Summary
AX: VoiceOver typing echo doesn't work in PDF form fields
utku.uckun
Reported
2024-11-13 15:56:11 PST
...
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-11-13 15:56:23 PST
<
rdar://problem/139835695
>
Tyler Wilcock
Comment 2
2024-11-14 17:46:30 PST
PR posted:
https://github.com/WebKit/WebKit/pull/36644
EWS
Comment 3
2024-11-14 17:53:09 PST
Committed
286623@main
(c4bcfc5ab537): <
https://commits.webkit.org/286623@main
> Reviewed commits have been landed. Closing PR #36644 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug