AX: VoiceOver typing echo doesn't work in PDF form fields https://bugs.webkit.org/show_bug.cgi?id=283089 rdar://139835695

Reviewed by Tyler Wilcock.

PDFs are hosted in a different process than Safari. With the current implementation all the PDF accessibility elements lack the Safari PID. Therefore, VoiceOver cannot add accessibility observers to these PDF accessibility elements.
This fix adds the application PID to WKAccessibilityPDFDocumentObject where all the descendant PDF AX nodes can inherit the same PID. This fixes the typing echo missing in PDF text fields when Isolated Tree Mode is disabled. Another fix will be submitted to fix typing echo and other VoiceOver issues in PDFs when ITM is enabled.

* Source/WebKit/WebProcess/Plugins/PDF/WKAccessibilityPDFDocumentObject.mm:
(-[WKAccessibilityPDFDocumentObject initWithPDFDocument:andElement:]):

Canonical link: https://commits.webkit.org/286623@main